--- a/5 Periodo/Des Sis Web II/aula1/public/index.html
+++ b/5 Periodo/Des Sis Web II/aula1/public/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
-</head>
-<body>
-    <h1>Exemplo</h1>
-    <div id = "conteudo"></div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Exemplo</title>
+        <link rel="stylesheet" type="text/css" href="index.css">
+    </head>
+    <body>
+        <h1>Exemplo</h1>
+        <div id = "conteudo"></div>
 
-    <script>src="index.js"</script>
-</body>
+        <a href="#" onclick="listar()">GET</a>
+        <a href="#" onclick="consultar()">GET BY ID</a>
+        <a href="#" onclick="inserir()">POST</a>
+        <a href="#" onclick="alterar()">PUT</a>
+        <a href="#" onclick="deletar()">DELETE</a>
+
+        <script src="index.js"></script>
+    </body>
 </html>
